# Uda_Cpp

./: .gitignore  LICENSE  README.md
P2_Foudations/02_Introduction_to_the_C++_Language/: CMakeLists.txt
P2_Foudations/02_Introduction_to_the_C++_Language/09_Sending_Output_to_the_Console/: 09_Sending_Output_to_the_Console.cpp  CMakeLists.txt
P2_Foudations/02_Introduction_to_the_C++_Language/12_Storing_Primitive_Types/: CMakeLists.txt
P2_Foudations/02_Introduction_to_the_C++_Language/14_Storing_Vectors/: 14_Storing_Vectors.cpp  CMakeLists.txt
P2_Foudations/02_Introduction_to_the_C++_Language/16_Using_Auto/: 16_Using_Auto.cpp  CMakeLists.txt
P2_Foudations/02_Introduction_to_the_C++_Language/17_Store_a_Grid_in_Your_Program/: 17_Store_a_Grid_in_Your_Program.cpp  CMakeLists.txt
P2_Foudations/02_Introduction_to_the_C++_Language/19_Working_with_Vectors/: 19_Working_with_Vectors.cpp  CMakeLists.txt
P2_Foudations/02_Introduction_to_the_C++_Language/20_For_Loops/: 20_For_Loops.cpp  CMakeLists.txt
P2_Foudations/02_Introduction_to_the_C++_Language/21_Functions/: CMakeLists.txt
P2_Foudations/02_Introduction_to_the_C++_Language/22_Print_the_Board/: 22_Print_the_Board.cpp  CMakeLists.txt
P2_Foudations/02_Introduction_to_the_C++_Language/23_If_Statements_and_While_Loops/: CMakeLists.txt  IfStatements.cpp
P2_Foudations/02_Introduction_to_the_C++_Language/24_Reading_From_a_File/: 24_Reading_From_a_File.cpp  CMakeLists.txt
P2_Foudations/02_Introduction_to_the_C++_Language/25_Read_the_Board_from_a_File/: 25_Read_the_Board_from_a_File.cpp  CMakeLists.txt
P2_Foudations/02_Introduction_to_the_C++_Language/26_Processing_Strings/: 26_Processing_Strings.cpp  CMakeLists.txt
P2_Foudations/02_Introduction_to_the_C++_Language/27_Adding_Data_to_a_Vector/: 27_Adding_Data_to_a_Vector.cpp  CMakeLists.txt
P2_Foudations/02_Introduction_to_the_C++_Language/28_Parse_Lines_from_the_File/: 28_Parse_Lines_from_the_File.cpp  CMakeLists.txt
P2_Foudations/02_Introduction_to_the_C++_Language/29_Use_ParsLine_Function/: 29_Use_ParsLine_Function.cpp  CMakeLists.txt
P2_Foudations/02_Introduction_to_the_C++_Language/30_Formatting_the_Printed_Board/: 30_Formatting_the_Printed_Board.cpp  CMakeLists.txt
P2_Foudations/02_Introduction_to_the_C++_Language/31_Formatting_the_Printed_Board/: 31_Formatting_the_Printed_Board.cpp  CMakeLists.txt
P2_Foudations/02_Introduction_to_the_C++_Language/32_Store_the_Board_using_the_State_Enum/: 32_Store_the_Board_using_the_State_Enum.cpp  CMakeLists.txt
P2_Foudations/03_Astar_Search/04_Writing_the_Astar_Heuristic/: main.cpp
P2_Foudations/03_Astar_Search/05_Pass_by_Reference_in_C++/: 05_Pass_by_Reference_in_C++.cpp
P2_Foudations/03_Astar_Search/07_Initialize_the_Open_Vector/: test.cpp
P2_Foudations/03_Astar_Search/08_Create_a_Comparison_Function/: main.cpp
P3_Object-Oriented Programming/: README.md
P4_Memory_Management/: README.md
P4_Memory_Management/02_Pointers_and_References/: README.md
P5_Concurrency/: README.md
P5_Concurrency/01_Introduction_and_Running_Threads/: 02_process_and_threads.md  CMakeLists.txt
P5_Concurrency/01_Introduction_and_Running_Threads/03_Running_a_Single_Thread/: 01_id_and_cores.cpp  02_controlled_flow.cpp  03_detach_thread.cpp  03example_1.cpp  03example_2.cpp  03example_3.cpp  03example_4.cpp  03example_5.cpp  03example_6.cpp  04quiz.cpp  CMakeLists.txt  example_2  example_2.cpp  example_3  example_3.cpp  example_4  example_4.cpp  example_5  example_5.cpp  example_6  example_6.cpp
P5_Concurrency/01_Introduction_and_Running_Threads/04_Starting_a_Thread_with_Function_Objects/: 01_thrad_with_function_and_data_parsing.cpp  02_lambda_expression.cpp  03_lambda_execution_order.cpp  04_threads_with_lambda.cpp  04example_1.cpp  04example_2.cpp  04example_3.cpp  04example_4.cpp  04example_5.cpp  04example_6.cpp  04quiz.cpp  CMakeLists.txt  example_1.cpp
P5_Concurrency/01_Introduction_and_Running_Threads/04_Starting_a_Thread_with_Function_Objects/example_1.dSYM/Contents/Resources/DWARF/: example_1
P5_Concurrency/01_Introduction_and_Running_Threads/05_Starting_a_Thread_with_Variadic_Templates_and_Member_Functions/: 01_arguments_with_variadic_template.cpp  02_variadic_template_function_call.cpp  03_variadic_template_reference_argument.cpp  04_variadic_template_member_function.cpp  05_variadic_template_member_function_scope.cpp  05example_1.cpp  05example_2.cpp  05example_3.cpp  05example_4.cpp  05example_5.cpp  05quiz.cpp  06quiz.cpp  CMakeLists.txt
P5_Concurrency/01_Introduction_and_Running_Threads/06_Running_Multiple_Threads/: 01_fork_join_intro.cpp  02_concurrency_lambda.cpp  06example_1.cpp  CMakeLists.txt
P5_Concurrency/01_Introduction_and_Running_Threads/07_Project_L1/: project_tasks.txt
P5_Concurrency/01_Introduction_and_Running_Threads/07_Project_L1/src/: TrafficObject.cpp  TrafficSimulator-L1.cpp
P5_Concurrency/02_Passing_Data_Between_Threads/: CMakeLists.txt
P5_Concurrency/02_Passing_Data_Between_Threads/02_Promises_and_Future/: 01_thread_fucntion_recap.cpp  02example_2.cpp  02example_3.cpp  02example_4.cpp  03_get_wait.cpp  04_passing_exceptions.cpp  CMakeLists.txt
P5_Concurrency/02_Passing_Data_Between_Threads/03_Threads_vs_Tasks/: 02_parallel_execution.cpp  03example_1.cpp  03example_2.cpp  03example_3.cpp  CMakeLists.txt
P5_Concurrency/02_Passing_Data_Between_Threads/05_Avoiding_Data_Races/: 02_data_races_pointer.cpp  03_data_parsing_move_semantics.cpp  04_move_semantics_and_uniqueness.cpp  05example_1.cpp  05example_2.cpp  05example_4.cpp  CMakeLists.txt
P5_Concurrency/03_Mutexes_and_Locks/: CMakeLists.txt
P5_Concurrency/03_Mutexes_and_Locks/02_Using_a_Mutex_to_Protect_Shared_Data/: 01_problem_in_shared_data.cpp  02_use_mutux_to_protect_data.cpp  02example_2_solution.cpp  02example_3_solution.cpp  02example_4_solution.cpp  03_mutux_deadlock.cpp  04_solve_deadlock.cpp  CMakeLists.txt
P5_Concurrency/03_Mutexes_and_Locks/03_Using_Locks_to_Avoid_Deadlocks/: 01_use_lock_guard.cpp  02_deadlock_in_lock_guard.cpp  03_solve_deadlock.cpp  03example_1_solution.cpp  CMakeLists.txt
(+69 files in other folders)
