add_executable(03example_1 03example_1.cpp)
target_link_libraries(03example_1)

add_executable(03example_2 03example_2.cpp)
target_link_libraries(03example_2)

add_executable(03example_3 03example_3.cpp)
target_link_libraries(03example_3)

add_executable(03example_4 03example_4.cpp)
target_link_libraries(03example_4)

add_executable(03example_5 03example_5.cpp)
target_link_libraries(03example_5)

add_executable(03example_6 03example_6.cpp)
target_link_libraries(03example_6)

add_executable(03quiz 03quiz.cpp)
target_link_libraries(03quiz)