add_executable(04example_1 04example_1.cpp)
target_link_libraries(04example_1)

add_executable(04example_2 04example_2.cpp)
target_link_libraries(04example_2)

add_executable(04example_3 04example_3.cpp)
target_link_libraries(04example_3)

add_executable(04example_4 04example_4.cpp)
target_link_libraries(04example_4)

add_executable(04example_5 04example_5.cpp)
target_link_libraries(04example_5)

add_executable(04example_6 04example_6.cpp)
target_link_libraries(04example_6)

add_executable(04quiz 04quiz.cpp)
target_link_libraries(04quiz)