add_executable(05example_1 05example_1.cpp)
target_link_libraries(05example_1)

add_executable(05example_2 05example_2.cpp)
target_link_libraries(05example_2)

add_executable(05example_3 05example_3.cpp)
target_link_libraries(05example_3)

add_executable(05example_4 05example_4.cpp)
target_link_libraries(05example_4)

add_executable(05example_5 05example_5.cpp)
target_link_libraries(05example_5)

add_executable(05quiz 05quiz.cpp)
target_link_libraries(05quiz)