add_executable(02example_1 02example_1.cpp)
target_link_libraries(02example_1)

add_executable(02example_2 02example_2.cpp)
target_link_libraries(02example_2)

add_executable(02example_3 02example_3.cpp)
target_link_libraries(02example_3)

add_executable(02example_4 02example_4.cpp)
target_link_libraries(02example_4)