add_executable(02example_2_solution 02example_2_solution.cpp)
target_link_libraries(02example_2_solution)

add_executable(02example_3_solution 02example_3_solution.cpp)
target_link_libraries(02example_3_solution)

add_executable(02example_4_solution 02example_4_solution.cpp)
target_link_libraries(02example_4_solution)

add_executable(02example_4 02example_4.cpp)
target_link_libraries(02example_4)